Fix various issues with tables, forms, and inputs on mobile/small screens
FossilOrigin-Name: 9c63572cee20f453dd4d179a1d2e33115519ab6f372c69d47a3005a9ff91cbd8

--- a/src/www/admin/static/handheld.css
+++ b/src/www/admin/static/handheld.css
@@ -8,11 +8,11 @@ body main {
 	padding-bottom: 7em;
 }
 
-input[type=number], input[type=color],
-input[type=email], input[type=file], input[type=url], input[type=month],
+input[type=number],
+input[type=email], input[type=url], input[type=month],
 input[type=password], input[type=range], input[type=search], input[type=tel],
 textarea, select, .input-list, .file-selector, input[type=text]:not([data-input]):not([size]) {
-	min-width: 0;
+	min-width: 5em;
 	max-width: calc(100% - 2em);
 	width: calc(95% - 2em);
 }
