--- a/src/www/admin/static/styles/02-common.css
+++ b/src/www/admin/static/styles/02-common.css
@@ -557,6 +557,7 @@ details summary.block::after {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
 }
 
 table .files-list, table .files-list figure {
